@@ -1,1 +1,2 @@
 DIST nipype-1.4.2.tar.gz 2823870 SHA256 935b660bfd81f773bd5291a90a921cc226f62940950c094be04f080f6c69501d SHA512 f913d1a63105ccb8392adfdba5ec52b3e5ce0c9ad145b062f6e551a811602b77a52f1f6e89d9d5ff366e9b063f0ab965cfbd6ae5f68a79e25e8970e1a864901c WHIRLPOOL 21ab8554f8d5eec5fc7d5d9e137eef24f11443b805c892cb1a3dfbd5f34030a08c39300778337eb5499b011a2049c3c2724988d2210356d0d5525f4758b33fdf
+DIST nipype-1.5.0.tar.gz 2735317 SHA256 dbbe74ac99740da749350a6957326bd78d6ba388694b0c09cd92575f111576af SHA512 eb11096a090855278c3e76ffe9643ab4de046a017511ba51f59448fd8cf9d67a4f6c552acbbbdd38065cfb456c24fd21299cf698fa05c5be507524622f28ac85 WHIRLPOOL ffb44ddcf8d6e6a2d0e4179c89f15d59edc86b5188232e8b170a1352d51aa4b3806313d0a1c6215aced0d916252e27c2d8cc97d5ef94d12ac0418681fae0a40b
