@@ -1,3 +1,8 @@
+*nipype-1.5.0 (17 Jul 2020)
+
+  17 Jul 2020;  <chymera@gentoo.org> +nipype-1.5.0.ebuild:
+  sci-libs/nipype: version bump 1.5.0
+
   31 Mar 2020;  <chymera@gentoo.org> nipype-1.4.2.ebuild:
   sci-libs/nipype: fixed test suite
 
